force-app/main/default/objects/Lead_Product__c/Lead_Product__c.object-meta.xml
<CustomObject>
    <label>Lead Product</label>
    <nameField>
        <label>Lead Product Naam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Producten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>