force-app/main/default/objects/Lead_Product__c/fields/Aantal__c.field-meta.xml
<CustomField>
    <fullName>Aantal__c</fullName>
    <description>The quantity of the choosen product.</description>
    <label>Aantal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>