force-app/main/default/objects/Lead_Product__c/fields/Bijzonderheden__c.field-meta.xml
<CustomField>
    <fullName>Bijzonderheden__c</fullName>
    <label>Bijzonderheden</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>