force-app/main/default/objects/Lead_Product__c/fields/Breedte_cm__c.field-meta.xml
<CustomField>
    <fullName>Breedte_cm__c</fullName>
    <description>Width of the carpet. Used to calculate M2 of carpet if Lenght and Width are both filled.</description>
    <label>Breedte (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>