force-app/main/default/objects/Lead_Product__c/fields/BTW__c.field-meta.xml
<CustomField>
    <fullName>BTW__c</fullName>
    <description>Filled by flow</description>
    <label>BTW%</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>