force-app/main/default/objects/Lead_Product__c/fields/BTW_Bedrag__c.field-meta.xml
<CustomField>
    <fullName>BTW_Bedrag__c</fullName>
    <formula>(Totaal_Extra_s__c +  Totale_Prijs__c)*BTW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTW Bedrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>