force-app/main/default/objects/Lead_Product__c/fields/Created_By_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if created by flow or by the web-to-lead form</description>
    <label>Created By Flow</label>
    <type>Checkbox</type>
</CustomField>