force-app/main/default/objects/Lead_Product__c/fields/Diameter_cm__c.field-meta.xml
<CustomField>
    <fullName>Diameter_cm__c</fullName>
    <description>Used if filled to calculated the area of the carpet.</description>
    <label>Diameter (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>