force-app/main/default/objects/Lead_Product__c/fields/Extra_behandelingen__c.field-meta.xml
<CustomField>
    <fullName>Extra_behandelingen__c</fullName>
    <description>Used to show related products</description>
    <label>Extra behandelingen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basisreiniging</fullName>
            </value>
            <value>
                <fullName>Reiniging &amp; Protect</fullName>
            </value>
            <value>
                <fullName>Huisdier Compleet</fullName>
            </value>
            <value>
                <fullName>Ontgeuren Overig (geen urine)</fullName>
            </value>
            <value>
                <fullName>Ontgeuren</fullName>
            </value>
            <value>
                <fullName>Inpakken voor opslag</fullName>
            </value>
            <value>
                <fullName>Reparatie Rand</fullName>
            </value>
            <value>
                <fullName>Zijde Behandeling</fullName>
            </value>
            <value>
                <fullName>Waterschade</fullName>
            </value>
            <value>
                <fullName>Met losse kussens</fullName>
            </value>
            <value>
                <fullName>Spoedbehandeling</fullName>
            </value>
            <value>
                <fullName>Anti Allergie Behandeling</fullName>
            </value>
            <value>
                <fullName>Anti Mot Behandeling</fullName>
            </value>
            <value>
                <fullName>Inpakken plastic</fullName>
            </value>
            <value>
                <fullName>Impregneren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>