force-app/main/default/objects/Lead_Product__c/fields/Gerelateerd_Product__c.field-meta.xml
<CustomField>
    <fullName>Gerelateerd_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead product the option is related to.</description>
    <label>Gerelateerd Product</label>
    <referenceTo>Lead_Product__c</referenceTo>
    <relationshipLabel>Lead Producten</relationshipLabel>
    <relationshipName>Lead_Producten</relationshipName>
    <type>Lookup</type>
</CustomField>