force-app/main/default/objects/Lead_Product__c/fields/Korting__c.field-meta.xml
<CustomField>
    <fullName>Korting__c</fullName>
    <description>Discoutn given on the selected lead product.</description>
    <label>Korting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>