force-app/main/default/objects/Lead_Product__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for quote request from website. Will be converted to Opportunity Line Items</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Producten</relationshipLabel>
    <relationshipName>Lead_Producten</relationshipName>
    <type>Lookup</type>
</CustomField>