force-app/main/default/objects/Lead_Product__c/fields/Lengte_cm__c.field-meta.xml
<CustomField>
    <fullName>Lengte_cm__c</fullName>
    <description>Length of the carpet. Used to calculate M2 of carpet if Lenght and Width are both filled.</description>
    <label>Lengte (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>