force-app/main/default/objects/Lead_Product__c/fields/Oppervlakte_m__c.field-meta.xml
<CustomField>
    <fullName>Oppervlakte_m__c</fullName>
    <description>Either filled in directly by w2l form or calculated based on length * width or based on diameter calculations.</description>
    <label>Oppervlakte (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>