force-app/main/default/objects/Lead_Product__c/fields/Prijstype__c.field-meta.xml
<CustomField>
    <fullName>Prijstype__c</fullName>
    <description>Used for Flow Conditions</description>
    <formula>TEXT(Product__r.Prijstype__c)</formula>
    <label>Prijstype</label>
    <type>Text</type>
</CustomField>