force-app/main/default/objects/Lead_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product requested to be quoted.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lead Producten</relationshipLabel>
    <relationshipName>Lead_Producten</relationshipName>
    <type>Lookup</type>
</CustomField>