force-app/main/default/objects/Lead_Product__c/fields/Regiotoeslag__c.field-meta.xml
<CustomField>
    <fullName>Regiotoeslag__c</fullName>
    <description>Gebruikt voor berekeningen</description>
    <label>Regiotoeslag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>