force-app/main/default/objects/Lead_Product__c/fields/Selectie_Producttype__c.field-meta.xml
<CustomField>
    <fullName>Selectie_Producttype__c</fullName>
    <description>Used for flow to check product</description>
    <formula>TEXT( Product__r.Selectie_Producttype__c)</formula>
    <label>Selectie Producttype</label>
    <type>Text</type>
</CustomField>