force-app/main/default/objects/Lead_Product__c/fields/Standard_Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Book_Entry_Id__c</fullName>
    <description>Used for conversion from lead to opportunity, so that the entry id does not have to be looked up</description>
    <label>Standard Price Book Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>