force-app/main/default/objects/Lead_Product__c/fields/Totaal__c.field-meta.xml
<CustomField>
    <fullName>Totaal__c</fullName>
    <description>Inclusief Extra&apos;s.</description>
    <formula>Totaal_Extra_s__c +  Totale_Prijs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>