force-app/main/default/objects/Lead_Product__c/fields/Totaal_incl_BTW__c.field-meta.xml
<CustomField>
    <fullName>Totaal_incl_BTW__c</fullName>
    <formula>IF(
 ISBLANK( Gerelateerd_Product__c),
 Totaal__c  +  BTW_Bedrag__c, 
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totaal incl. BTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>