force-app/main/default/objects/Lead_Product__c/fields/Totale_Prijs__c.field-meta.xml
<CustomField>
    <fullName>Totale_Prijs__c</fullName>
    <description>Gevuld door flow.</description>
    <label>Totaal Excl BTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>