force-app/main/default/objects/Lead_Product__c/fields/Verkoopprijs__c.field-meta.xml
<CustomField>
    <fullName>Verkoopprijs__c</fullName>
    <description>The unit price given to the product.</description>
    <label>Verkoopprijs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>